feat: add bank in cn and agent in us

--- a/content/us/index.mdx
+++ b/content/us/index.mdx
@@ -1,1 +1,12 @@
-# 英国公司
+# 美国公司
+
+## 公司类型
+
+| 类型                 | 所有权结构              | 责任承担         | 税收方式                | 管理与合规               | 融资能力                 | 适用场景与限制            |
+|----------------------|-------------------------|------------------|-------------------------|--------------------------|--------------------------|---------------------------|
+| Sole Proprietorship  | 个人独资                | 无限个人责任     | 个人所得税（自雇税）    | 最简单，几乎无合规要求   | 仅靠个人资金             | 小型、低风险企业          |
+| Partnership          | 两人或以上合伙          | 无限个人责任（普通合伙）有限责任（有限合伙/LLP） | 个人所得税（自雇税）    | 合伙协议，部分合规要求     | 合伙人共同出资            | 适合合作创业、专业服务     |
+| LLC                  | 一人或多人（成员制）    | 有限责任         | 可选择个人所得税或公司税通常为“pass-through” | 较灵活，合规要求中等      | 可吸纳成员出资，不能发行股票 | 适合中小企业、灵活管理     |
+| S Corporation        | 股东（≤100人，且为美国公民/居民） | 有限责任         | “pass-through”利润分配到个人所得税 | 合规要求较高（董事会、年会等） | 可发行股票，但有股东和类别限制 | 适合税务优化的小型公司     |
+| C Corporation        | 股东（无限人数）        | 有限责任         | 公司所得税+股东分红税（双重征税） | 合规最严格，需董事会、年报等 | 可发行多类别股票，融资最灵活 | 适合计划融资、上市的大型公司 |
+
