feat: add more bank

--- a/content/cn/bank/index.mdx
+++ b/content/cn/bank/index.mdx
@@ -1,1 +1,33 @@
 # 银行
+
+## 一、银行开户基本要求
+
+1、公司法定代表人需本人到场办理；
+
+2、银行需要上门拍照，需要制作一个公司招牌与门牌号；
+
+3、法人真实，对公司基本情况及业务范围了解；
+
+## 二、银行开户材料
+
+1、法人必须到场且需要携带身份证原件和复印件两份；
+
+2、另一个网银管理员的身份证原件和复印件两份；
+
+3、营业执照正副本原件与公章、法人私章、财务章；
+
+4、公司章程原件和复印件一份；
+
+5、公司股东身份证复印件各1份并需标明持股比例，若股东为企业，则需不断往上追溯至自然人股东；
+
+6、提供公司相关的地址证明材料，如：房产证、房屋租赁凭证；
+
+## 三、公司银行开户的流程
+
+1、预约银行开户时间；
+
+2、携带开户所需要的资料去银行提交；
+
+3、银行指派员工下场地核查公司的地址，和公司的法人拍照；
+
+4、银行审核地址没有问题的话，会通知法人过去银行开户；办理好之后，2-3个工作日之后，开户成功，银行会给回一张基本存款账户信息表，网银U盾和财智卡。
