--- a/content/cn/register/index.mdx
+++ b/content/cn/register/index.mdx
@@ -2,54 +2,55 @@
 asIndexPage: true
 ---
 
+import { Steps } from "nextra/components";
+
 # 注册
 
-## 注册流程
+## 注册费用概览
 
-一、个人注册公司费用（仅供参考）
-
-
-1、营业执照免费
-
-
-2、篆刻印章费用：费用一般是几百，不同地区会有价格上的差异；
+1. 营业执照：免费
+2. 印章刻制：约几百元（地区差异）
+3. 印花税：注册资本的 0.5%
+4. 银行基本户：200-1000 元不等
+5. 税控设备：金税盘 480 元、U 棒 50 元
 
 
-3、印花税：和注册资本的多少有直接的关系。注册资本的0.5%
+## 注册流程详解
+<Steps>
 
+### 公司核名
+   - 领取并填写"企业名称预先核准申请表"
+   - 工商局内部网检索重名
+   - 获取"企业名称预先核准通知书"
 
-4、银行开设基本户（200-1000不等）
+### 办公场所
+   - 租赁写字楼办公室
+   - 签订租房合同
+   - 完成房管局备案
 
+### 公司章程
+   - 制定公司章程
+   - 全体股东签字确认
 
-5、核定税种（金税盘480元、U棒50元）
+### 工商登记
+   - 领取并填写各类登记表格
+   - 准备相关材料（核名通知、章程、租房合同等）
+   - 提交工商局审核
+   - 约 15 个工作日后领取营业执照
+   - 注：部分地区支持全程电子化办理
 
-二、个人注册公司流程
+### 刻制印章
+   - 凭营业执照到指定刻章点
+   - 刻制公章、财务章等
 
+### 税务登记
+   - 领取营业执照后 30 日内
+   - 到当地税务局办理税务报到
 
-1、核名：到工商局去领取一张“企业(字号)名称预先核准申请表”，填写你准备取的公司名称，由工商局上网(工商局内部网)检索是否有重名，如果没有重名，就可以使用这个名称，就会核发一张“企业(字号)名称预先核准通知书”。
+### 银行开户
+   - 凭营业执照
+   - 开立公司基本账户
 
+个人注册公司具有经营灵活、决策迅速等优势，且目前注册门槛较低，建议有创业意向的创业者及时办理注册手续。
 
-2、租房：去专门的写字楼租一间办公室。租房后要签订租房合同，并到房管局备案。
-
-
-3、编写“公司章程”：章程需要由所有股东签名。
-
-
-4、办理公司注册登记手续：
-
-到工商局领取公司设立登记的各种表格，包括设立登记申请表、股东(发起人)名单、董事经理监理情况、法人代表登记表、指定代表或委托代理人登记表。填好后，连同核名通知、公司章程、房租合同、房产证复印件一起交给工商局。大概15个工作日后可领取执照。当然，现在很多地方都已实现全程电子化，可以在网上办理相关手续。
-
-
-5、凭营业执照，到公安局指定的刻章公司，去刻公章、财务章。后面步骤中，均需要用到公章或财务章。
-
-
-6、办理税务报到：
-
-领取执照后，30日内到当地税务局申办理税务报到。
-
-
-7、去银行开基本户：
-
-凭营业执照，去银行开立基本账号。
-
-这就是注册个人公司的流程和需要的费用，现在上海注册公司的费用和门槛已经很低了，有需要注册公司的创业应该趁早注册了个人注册公司最大的优势就是经营灵活，不需要开股东大会等等，自己可以快速的决策。
+</Steps>
