feat: add more about tax

--- a/content/cn/tax/index.mdx
+++ b/content/cn/tax/index.mdx
@@ -3,3 +3,72 @@ asIndexPage: true
 ---
 
 # 税务
+
+## 如何纳税
+
+### 增值税申报
+
+### 企业所得税申报
+
+### 个人所得税申报
+
+### 其他税种申报
+
+## 何时纳税
+
+| ![办税日历](./img-tax-cal.png) | ![办税日历](./img-tax-mal.png) |
+| ------------------------------ | ------------------------------ |
+
+> 参考来源：[国家税务总局办税日历](https://www.gov.cn/fuwu/2021-10/13/content_5642282.htm)
+
+## 一般纳税人和小规模纳税人
+
+### 纳税人分类标准
+
+#### 小规模纳税人
+
+- 年应征增值税销售额 ≤ 500万元（2018年4月份修正）
+- 不能正确核算增值税的三大对象（销项、进项和应纳税额）
+- 不能按规定报送有关税务资料
+
+[小规模纳税人免征增值税政策热点问题解答（一）——免税篇](https://guangdong.chinatax.gov.cn/gdsw/wwshzzsgg-zcfd/2019-04/11/content_69078c36bb264ea59d02925f98a62f7b.shtml)
+
+> 参考来源：[财政部 税务总局关于统一增值税小规模纳税人标准的通知](https://www.gov.cn/zhengce/zhengceku/2018-12/31/content_5439261.htm)
+
+#### 一般纳税人
+
+- 年应征增值税销售额 > 500万元
+- 能进行健全的会计核算
+- 能按规定报送有关税务资料
+
+> 注：小规模纳税人与个体工商户是交叉关系的，有关联，又有差别。小规模纳税人里有个体工商户，个体工商户里有小规模纳税人。
+
+### 纳税人类型对比
+| 对比项         | 一般纳税人                                                                 | 小规模纳税人                   |
+| -------------- | -------------------------------------------------------------------------- | ------------------------------ |
+| **税率**       | 适用 13%、9%、6%、0 几档税率                                               | 适用 3% 征收率                  |
+| **发票使用**   | 销售货物可以开具增值税专用发票，购进货物可以开具增值税专用发票             | 不能开具专用发票，购进货物不能抵扣进项税 |
+| **财务处理**   | 按价款部分计入成本，税款部分计入“应交税金-应交增值税-进项税额”账户         | 全部金额计入成本                |
+| **应交税金计算** | 按销项税额减去进项税额的差额缴纳增值税                                   | 按照销售额直接计算增值税         |
+| **申报频率**   | 以月为纳税期限申报纳税                                                     | 以季度为纳税期限申报纳税         |
+| **计税方法**   | 一般计税方法（提供公共交通运输服务等特定行业的纳税人可选择简易计税方法）     | 简易计税方法                    |
+
+
+**那么注册公司是选择一般纳税人还是小规模纳税人？**
+
+1. 看规模
+  - 如果公司投资规模大，年销售收入很快就会超过500万元，建议直接认定为一般纳税人。
+  - 如果估计公司月销售额在10万元以下，建议选择小规模纳税人，从2019年1月1日起，将享受增值税免征政策。
+
+2. 看买方
+  - 如果你的购买方预计未来主要是大客户，很可能他们不会接受3%征收率的增值税专用发票，这样建议直接认定一般纳税人，否则选择小规模纳税人。
+
+3. 看抵扣
+  - 如果你的公司成本费用构成取得增值税专用发票占比高，进项税额抵扣充分，通过测算估计增值税税负低于3%，建议选择认定一般纳税人，否则选择小规模纳税人。
+
+4. 看行业
+  - 如果是13%税率的行业，且为轻资产行业。这类行业一般增值税税负较高，建议选择小规模纳税人，否则选择一般纳税人。
+
+5. 看优惠
+  - 如果你所在行业能否销售增值税优惠政策。比如软件企业增值税超税负返还等增值税优惠政策，如果能享受，建议选择一般纳税人，否则选择小规模纳税人。
+
